--- a/plc4x/throwing-the-towel.adoc
+++ b/plc4x/throwing-the-towel.adoc
@@ -238,7 +238,7 @@ Generally: Companies relying on open-source should consider funding both the pro
 
 I know the ASF is already preparing itself and it's projects, and this comes with quite some costs for the foundation.
 Processes need to be defined or re-defined, new tooling needs to be created, projects need to be trained to follow new processes.
-If these additional costs make the foundations run at a deficit for too long, these safe harbours might also disappear.
+If these additional costs make foundations run at a deficit for too long, these safe harbours might also disappear.
 
 == Call to action
 
